add turbo frame tags to make playing spa-like

--- a/app/views/auctions/_new_auction_form.html.erb
+++ b/app/views/auctions/_new_auction_form.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag "board-frame" do %>
 <%= link_to 'Back to game', game_path(game) %>
 <%= form_with url: start_auction_path do |form| %>
   <% if game.errors.any? %>
@@ -34,4 +35,5 @@
   <div>
     <%= form.submit 'Pass auction' %>
   </div>
+<% end %>
 <% end %>
