--- a/app/views/auctions/_new_bid_form.html.erb
+++ b/app/views/auctions/_new_bid_form.html.erb
@@ -1,3 +1,5 @@
+<%= turbo_frame_tag "board-frame" do %>
+<%= link_to "Back to game", game_path(game) %>
 <%= form_with url: bid_path(game) do |form| %>
   <div>
     <%= form.label :company, style: "display: none" %>
@@ -35,4 +37,5 @@
       <% end %>
     </ul>
   </div>
+<% end %>
 <% end %>
