--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,8 +4,8 @@
 
 <%= link_to 'Start game', start_game_path(@game), data: {turbo_method: :post } if @game.owner == current_user and not @game.started? %>
 
-<%= turbo_stream_from @game %>
-<%= render @game, game: @game %>
+<%= turbo_stream_from User, current_user, @game  %>
+<%= render @game, game: @game, user: current_user %>
 
 <div>
   <%= link_to "Edit this game", edit_game_path(@game) %> |
