--- a/app/views/games/_actions.html.erb
+++ b/app/views/games/_actions.html.erb
@@ -1,6 +1,6 @@
 <h3>Actions</h3>
 <div class="action-container">
   <% game.action_availability.each do |action, data| %>
-    <%= render 'games/action', action: action, data: data %>
+    <%= render 'games/action', action: action, data: data, user: user, game: game %>
   <% end %>
 </div>
